fix up begoning even more